[package]
name = "fotografi-be"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
text_io = "0.1"
tide = "0.16"
async-std = { version = "1.12.0", features = [ "attributes" ] }
sqlx = { version = "0.6.2", features = [ "runtime-async-std-native-tls", "postgres", "time" ] }
dotenv = "0.15"
futures-util = "0.3"
regex = "1.3"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
chrono = "0.4.19"
sha256 = "1.1.2"
bcrypt = "0.14.0"
rand = "0.8"
http = "0.2"
lazy_static = "1.4"
async_once = "0.2.6"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }  
actix-web = "4"
actix-cors = "0.6.2"
serde_merge = "0.1.3"
time = { version = "0.3.5", features = ["macros"] }
bigdecimal = "0.4"